# vision-annotation-kit

./: .gitignore  README.md  pyproject.toml  requirements.txt
annotation_kit/annotators/: bbox_annotator.py
annotation_kit/utils/: editing_utils.py  labeling_utils.py  rosbag_utils.py
dataset/: classes.json
examples/: extract_images_from_rosbag.py  generate_yolo_labels.py
scripts/: extract_rosbags.sh
